# homescripts

./: .gitignore  .profile  ARCH.distrobox  FEDORA.distrobox  README.md  arch.sh  bootstrap.sh  configuration.nix  fedora-depends.sh  foldersync.sh  nvidia-fedora-new.sh  nvidia-fedora.sh
.config/: .xlayoutdisplay  (+9 more)
.config/bar-scripts/battery_monitor/: Cargo.toml
.config/bar-scripts/battery_monitor/src/: main.rs
.config/rustcfg/airpods/: Cargo.toml
.config/rustcfg/airpods/src/: main.rs
.config/rustcfg/aurs/: Cargo.toml
.config/rustcfg/aurs/src/: aur.rs  cli.rs  main.rs  pkg.rs
.config/rustcfg/better-rm/: Cargo.toml  test.sh
.config/rustcfg/better-rm/archive/: action.rs  weight.rs
.config/rustcfg/better-rm/src/: action.rs  config.rs  format.rs  main.rs  prelude.rs
.config/rustcfg/cn_rs/: Cargo.toml
.config/rustcfg/cn_rs/src/: env.rs  io_methods.rs  langs.rs  main.rs  templates.rs  tui.rs
.config/rustcfg/cn_rs/src/templates/: c.rs  web.rs
.config/rustcfg/cn_rs/templatesrc/c/: build.sh  main.c  prelude.h
.config/rustcfg/cn_rs/templatesrc/web/: index.css  index.html  index.js
.config/rustcfg/dumbfetch_rs/: Cargo.toml
.config/rustcfg/dumbfetch_rs/src/: argparse.rs  desktop.rs  disk.rs  entry.rs  kernel.rs  main.rs  nvidia.rs  output.rs  term.rs  uptime.rs
.config/rustcfg/examples-cookbook/: Cargo.toml
.config/rustcfg/examples-cookbook/src/: gtk_responsive_tokio.rs  main.rs
.config/rustcfg/hbar/: Cargo.toml  battery  hbar-test
.config/rustcfg/hbar-test/: Cargo.toml
.config/rustcfg/hbar-test/src/: lib.rs  main.rs  runtime.rs
.config/rustcfg/hbar-test/src/modules/: datetime.rs  mod.rs
.config/rustcfg/hbar-test/src/types/: error.rs  icon.rs  mod.rs  percent.rs
.config/rustcfg/hbar/archived/: config.rs
.config/rustcfg/hbar/archived/battery/: sysfs.rs
.config/rustcfg/hbar/src/: argparse.rs  bar.rs  config.rs  globals.rs  lib.rs  main.rs  prelude.rs  runtime.rs
.config/rustcfg/hbar/src/modules/: cpu.rs  disks.rs  memory.rs  mod.rs  time.rs  weather.rs  workspaces.rs
.config/rustcfg/hbar/src/types/: autobool.rs  backend.rs  error.rs  fucking_float.rs  icon.rs  log_level.rs  mod.rs  monitor.rs  percent.rs
.config/rustcfg/hyprpointer/: Cargo.toml  hyprpointer  perf.data
.config/rustcfg/hyprpointer/archive/: arghelp.rs  cli.rs
.config/rustcfg/hyprpointer/src/: argparse.rs  backend.rs  cleanup.rs  cli.rs  config.rs  get_mice.rs  hypr.rs  main.rs  types.rs  udev.rs  xorg.rs
.config/rustcfg/lns_rs/: Cargo.toml
.config/rustcfg/lns_rs/src/: argparse.rs  formatting.rs  globals.rs  main.rs  resolver.rs
.config/rustcfg/lsprint/: Cargo.toml  lsprint.zsh
.config/rustcfg/lsprint-rs/: Cargo.toml
.config/rustcfg/lsprint-rs/src/: bruh.rs  constants.rs  format.rs  main.rs
.config/rustcfg/lsprint/src/: constants.rs  ls.rs  main.rs  render.rs
.config/rustcfg/packapp/: .env  Cargo.toml
.config/rustcfg/packapp/packapp-lib/: Cargo.toml
.config/rustcfg/packapp/packapp-lib/src/: formatting.rs  main.rs  package.rs
.config/rustcfg/packapp/src/: backends.rs  config.rs  db.rs  main.rs
.config/rustcfg/pacs/: Cargo.toml
.config/rustcfg/pacs/src/: aur.rs  cli.rs  main.rs  pacman.rs  search.rs  types.rs
.config/rustcfg/pmgmt/: Cargo.toml
.config/rustcfg/pmgmt-rs/: Cargo.toml
.config/rustcfg/pmgmt-rs/src/: config.rs  main.rs  state.rs  types.rs
.config/rustcfg/pmgmt-rs/src/xmlgen/: asusd.rs  backlight.rs  login.rs  mod.rs  supergfxd.rs  upower.rs
.config/rustcfg/pmgmt/src/: argparse.rs  dbus_server.rs  logger.rs  main.rs  rofi.rs  utils.rs
.config/rustcfg/pmgmt/src/xmlgen/: gamemode.rs  mod.rs  notification.rs  powerprofiles.rs  supergfxd.rs
.config/rustcfg/pmgmt2/: Cargo.toml
.config/rustcfg/pmgmt2/src/: config.rs  main.rs
.config/rustcfg/pmgmt2/src/xmlgen/: mod.rs  switcherooctl.rs
.config/rustcfg/pointer-rs/: Cargo.toml
.config/rustcfg/pointer-rs-bak/: Cargo.toml
.config/rustcfg/pointer-rs-bak/archive/: xorg.rs
.config/rustcfg/pointer-rs-bak/src/: config.rs  hypr.rs  main.rs  types.rs  udev.rs
.config/rustcfg/pointer-rs/archive/: err.rs  types.rs
.config/rustcfg/pointer-rs/src/: config.rs  hypr.rs  main.rs  types.rs  udev.rs
.config/rustcfg/power-cli/: Cargo.toml  daemon.sh  generate.sh  statusline.sh
.config/rustcfg/power-cli/src/: battery.rs  cfg.rs  gfx.rs  main.rs  powerprofile.rs
.config/rustcfg/power-cli/src/xmlgen/: gfxproxy.rs  mod.rs  upowerproxy.rs
.config/rustcfg/prompt/: Cargo.toml  vlkprompt
.config/rustcfg/prompt/src/: cli.rs  config.rs  error.rs  main.rs  prelude.rs  render.rs
.config/rustcfg/prompt/src/modules/: cwd.rs  mod.rs
.config/rustcfg/psa/: Cargo.toml
.config/rustcfg/psa-new/: Cargo.toml
.config/rustcfg/psa-new/src/: cli.rs  formatting.rs  lib.rs  main.rs  processes.rs  runtime.rs  terminal.rs  types.rs  users.rs
.config/rustcfg/psa-rs/: Cargo.toml
.config/rustcfg/psa-rs/src/: command.rs  main.rs  options.rs  proc.rs  procinfo.rs  procs.rs  serde.unused.rs  style.rs  ui.rs
.config/rustcfg/psa/src/: action.rs  cli.rs  config_old.rs  main.rs  options.rs  proc.rs
.config/rustcfg/symlink_unfuckd/: Cargo.toml  config  old_main.rs
.config/rustcfg/symlink_unfuckd/src/: config.rs  lockfile.rs  logging.rs  main.rs  src
.config/rustcfg/term-utils/: Cargo.toml
.config/rustcfg/term-utils/src/: argparse.rs  error.rs  grid.rs  main.rs  utils.rs
.config/rustcfg/touchpad-monitor/: Cargo.toml
.config/rustcfg/touchpad-monitor/src/: main.rs  shared_udev.rs
.config/rustcfg/touchpad-monitor/src/backends/: mod.rs
.config/rustcfg/vlkprompt/: 40-vlkprompt.zsh  Cargo.toml  promptgen.zsh  vlkprompt-old  vlkprompt.zsh
.config/rustcfg/vlkprompt/src/: config.rs  configlib.rs  format.rs  main.rs
.config/rustcfg/vlkprompt/src/prompt/: current_directory.rs  hostname.rs  login.rs  mod.rs  shell_env.rs  sudo.rs  timer.rs
.config/rustcfg/vlkprompt/vlkprompt/: Cargo.toml
.config/rustcfg/vlkprompt/vlkprompt/src/: constants.rs  lib.rs  sh.rs
.config/rustcfg/waybar_supergfxd_dbus/: Cargo.toml
.config/rustcfg/waybar_supergfxd_dbus/src/: dbus_rs.rs  main.rs  types.rs  xmlgen.rs
(+799 files in other folders)
