[package]
name = "battery_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
upower_dbus = "0.3.2"
zbus = { version = "3.10.0", features = ["tokio"] }
