[package]
name = "aurs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["serde", "std", "pure-rust-locales"] }
clap = { version = "4.4.14", features = ["cargo", "derive", "env", "string"] }
eyre = "0.6.11"
raur = { version = "7.0.0", default-features = false, features = ["blocking"] }
serde = "1.0.195"
serde-binary = "0.5.0"
stanza = "0.5.1"
strum = "0.25.0"
strum_macros = "0.25.3"
