[package]
name = "better-rm"
version = "0.1.0"
description = "A better, safer alternative to GNU rm"
authors = ["vlk"]
edition = "2021"

[profile.release]
strip = true

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
lscolors = "0.17"
nu-ansi-term = "0.50"
simple-eyre = "0.3"
strum = "0.26"
strum_macros = "0.26"
terminal_size = "0.3"
trash = { version = "3.3", default-features = false, features = [
    "chrono",
    "coinit_speed_over_memory",
] }
uutils_term_grid = "0.4"
