[package]
name = "cn_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8.12", default-features = false, features = ["no-rng", "std"] }
serde = "1.0.219"
serde_derive = "1.0.219"
signal-hook = "0.3.18"
termion = "4.0.5"
toml_edit = { version = "0.22.27", features = ["serde"] }
