[package]
name = "examples-cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4 = { version = "0.8.0", features = ["v4_12"] }
tokio = { version = "1.36.0", default-features = false, features = ["full"] }
