[package]
name = "hbar"
version = "0.1.0"
edition = "2021"

[lib]
name = "hbar"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.7", default-features = false, features = [
    "std",
    "compile-time-rng",
    "serde",
] }
chrono = { version = "0.4.33", default-features = false, features = [
    "serde",
    "std",
    "clock",
] }
derive_more = "0.99.17"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
itertools = "0.12.1"
lazy_static = "1.4.0"
parking_lot = { version = "0.12.1", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
simple-eyre = "0.3.1"
strum = { version = "0.26.1", features = ["strum_macros", "derive"] }
strum_macros = "0.26.1"
thiserror = "1.0.56"
tokio = { version = "1.36.0", default-features = false, features = [
    "fs",
    "io-std",
    "macros",
    "parking_lot",
    "rt",
] }
toml = "0.8.9"
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
