[package]
name = "hbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.7", default-features = false, features = [
    "std",
    "serde",
    "no-rng",
] }
chrono = { version = "0.4.33", default-features = false, features = [
    "serde",
    "std",
    "clock",
] }
const_format = { version = "0.2.32", features = ["rust_1_64"] }
derive_more = "0.99.17"
futures-util = { version = "0.3.30", features = ["tokio-io"] }
if_chain = "1.0.2"
inotify = "0.10.2"
itertools = "0.12.1"
lazy_static = "1.4.0"
nix = { version = "0.27.1", features = ["signal", "user", "fs", "ioctl"] }
parking_lot = { version = "0.12.1", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["json", "stream"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
simple-eyre = "0.3.1"
size = "0.4.1"
smart-default = "0.7.1"
strum = { version = "0.26.1", features = ["strum_macros", "derive", "phf"] }
strum_macros = "0.26.1"
sysinfo = { version = "0.30.5", features = ["serde"], default-features = false }
thiserror = "1.0.56"
tokio = { version = "1.36.0", default-features = false, features = [
    "rt",
    "macros",
    "parking_lot",
    "time",
    "sync",
    "process",
    "signal",
    "io-std",
    "fs",
    "rt-multi-thread",
    "io-util",
    "net",
] }
zbus = { version = "3.15.0", default-features = false, features = [
    "tokio",
    "chrono",
    "serde-xml-rs",
] }
