[package]
name = "hbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.7", default-features = false, features = [
    "std",
    "serde",
    "no-rng",
] }
chrono = { version = "0.4.33", default-features = false, features = [
    "serde",
    "std",
    "clock",
] }
clap = { version = "4.4.18", features = ["derive", "cargo", "env", "unicode"] }
clap-verbosity-flag = "2.1.2"
const_format = { version = "0.2.32", features = ["rust_1_64"] }
derive_more = "0.99.17"
dirs = "5.0.1"
futures-util = { version = "0.3.30", features = ["tokio-io"] }
gtk4 = { version = "0.8.0", features = ["v4_12"] }
if_chain = "1.0.2"
inotify = "0.10.2"
itertools = "0.12.1"
lazy_static = "1.4.0"
nix = { version = "0.27.1", features = ["signal"] }
parking_lot = { version = "0.12.1", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["json", "stream"] }
serde = { version = "1.0.196", features = ["derive"] }
simple-eyre = "0.3.1"
size = "0.4.1"
smart-default = "0.7.1"
strum = { version = "0.26.1", features = ["strum_macros", "derive", "phf"] }
strum_macros = "0.26.1"
sysinfo = { version = "0.30.5", features = ["serde"], default-features = false }
thiserror = "1.0.56"
tokio = { version = "1.36.0", default-features = false, features = [
    "macros",
    "parking_lot",
    "time",
    "sync",
    "process",
    "signal",
    "io-std",
    "fs",
    "rt-multi-thread",
    "io-util",
    "tracing",
] }
toml = "0.8.10"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-log = { version = "0.2.0", features = ["ahash", "lru"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "chrono",
    "parking_lot",
    "serde",
    "tracing-serde",
] }
wayland-client = { version = "0.31.2", features = ["log"] }
wayland-protocols = { version = "0.31.2", features = [
    "client",
    "staging",
    "unstable",
    "wayland-client",
] }
wayland-protocols-wlr = { version = "0.2.0", features = [
    "wayland-client",
    "client",
] }
zbus = { version = "3.15.0", default-features = false, features = [
    "tokio",
    "chrono",
    "serde-xml-rs",
] }
