[package]
name = "hbar"
version = "0.1.0"
edition = "2021"
authors = ["vlk"]
description = "HBAR: A better Linux statusbar supporting both wayland and x11"
license = "GPL-3.0-or-later"

[[bin]]
name = "hbar"
path = "src/globals.rs"

[dependencies]
ahash = { version = "0.8.7", default-features = false, features = [
    "std",
    "serde",
    "no-rng",
] }
chrono = { version = "0.4.33", default-features = false, features = [
    "serde",
    "std",
    "clock",
] }
clap = { version = "4.4.18", features = ["derive", "env", "unicode"] }
color-eyre = "0.6.2"
const_format = { version = "0.2.32", features = ["rust_1_64"] }
derive_more = "0.99.17"
dirs = "5.0.1"
futures-util = { version = "0.3.30", features = ["tokio-io"] }
gtk4 = { version = "0.8.0", features = ["v4_12"] }
heck = "0.4.1"
hyprland = "0.3.13"
if_chain = "1.0.2"
inotify = "0.10.2"
itertools = "0.12.1"
lazy_static = "1.4.0"
parking_lot = { version = "0.12.1", features = ["serde"] }
reqwest = { version = "0.11.24", default-features = false, features = [
    "native-tls",
] }
serde = { version = "1.0.196", features = ["derive"] }
size = "0.4.1"
smart-default = "0.7.1"
strum = { version = "0.26.1", features = ["strum_macros", "derive", "phf"] }
strum_macros = "0.26.1"
swayipc-async = "2.0.2"
sysinfo = { version = "0.30.5", features = ["serde"], default-features = false }
thiserror = "1.0.56"
tokio = { version = "1.36.0", default-features = false, features = [
    "macros",
    "parking_lot",
    "time",
    "sync",
    "process",
    "signal",
    "io-std",
    "fs",
    "rt-multi-thread",
    "io-util",
    "tracing",
] }
toml_edit = { version = "0.22.4", features = ["perf", "serde"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "chrono",
    "parking_lot",
    "serde",
    "tracing-serde",
] }
wayland-client = { version = "0.31.2", features = ["log"] }
wayland-protocols = { version = "0.31.2", features = [
    "client",
    "staging",
    "unstable",
    "wayland-client",
] }
wayland-protocols-wlr = { version = "0.2.0", features = [
    "wayland-client",
    "client",
] }
x11rb-async = { version = "0.13.0", features = [
    "dpms",
    "xinput",
    "randr",
    "xinerama",
] }
zbus = { version = "3.15.0", default-features = false, features = [
    "tokio",
    "chrono",
    "serde-xml-rs",
] }
