[package]
name = "hyprpointer"
description = "A pointer monitoring program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
hyprland = "0.3.*"
inotify = "0.10.2"
lazy_static = "1.4.0"
serde = { version = "1.0.195", features = ["derive"] }
strum = { version = "0.25.*", features = ["derive", "phf", "strum_macros"] }
strum_macros = "0.25.*"
tokio = { version = "1.*", default-features = false, features = ["rt", "macros", "parking_lot", "mio", "io-std", "io-util", "process", "signal", "sync"] }
tokio-udev = "0.9.*"
toml = "0.8.8"
unicode-width = { version = "0.1.11", features = ["std"] }
x11rb = { version = "0.13.0", features = ["xinput"] }
