[package]
name = "lsprint-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.7", default-features = false, features = ["std", "no-rng"] }
lscolors = { git = "https://github.com/REALERvolker1/lscolors", version = "0.16.0", default-features = false, features = [
    "nu-ansi-term",
] }
terminal_size = "0.3.0"
unicode-display-width = "0.3.0"
