[package]
name = "lsprint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = { version = "7.1.0", features = ["custom_styling"] }
crossterm = { version = "0.27.0", default-features = false }
file_type_enum = "2.0.1"
lscolors = { version = "0.16.0", default-features = false, features = ["crossterm"] }
