[package]
name = "packapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
which = "5.0.0"
serde = { version = "1.0.192", features = ["derive"] }
futures = "0.3.29"
