[package]
name = "pointer-rs"
version = "0.1.0"
edition = "2021"
authors = ["vlk"]
description = "pointer-rs, an overengineered event-driven touchpad toggler for window managers."
license = "GPL-3.0-or-later"

[dependencies]
ahash = { version = "0.8.7", default-features = false, features = [
    "std",
    "no-rng",
] }
clap = { version = "4.5.1", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
] }
derive_more = { version = "0.99.17", default-features = false }
futures-lite = "2.2.0"
hyprland = { version = "0.3.13", default-features = false, features = ["data", "tokio", "keyword"] }
inotify = { version = "0.10.2" }
lazy_static = "1.4.0"
serde = { version = "1.0.196", features = ["derive"] }
simple-eyre = "0.3.1"
strum = { version = "0.26.1", features = ["strum_macros", "derive", "phf"] }
strum_macros = "0.26.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", default-features = false, features = ["rt", "macros", "parking_lot"] }
tokio-udev = "0.9.1"
udev = "0.8.0"
