[package]
name = "pointer-rs"
version = "0.1.0"
edition = "2021"
authors = ["vlk"]
description = "pointer-rs, an overengineered event-driven touchpad toggler for window managers."
license = "GPL-3.0-or-later"

[dependencies]
ahash = { version = "0.8.11", default-features = false, features = [
    "std",
    "no-rng",
] }
clap = { version = "4.5.4", features = ["derive", "cargo", "wrap_help"] }
color-eyre = "0.6.3"
derive_more = { version = "0.99.17", default-features = false }
futures-util = { version = "0.3.30", default-features = false, features = [
    "std",
] }
hyprland = { version = "0.3.13", default-features = false, features = [
    "data",
    "keyword",
    "tokio",
] }
inotify = { version = "0.10.2" }
serde = { version = "1.0.197", features = ["derive"] }
simple-eyre = "0.3.1"
strum = { version = "0.26.2", features = ["phf"] }
strum_macros = "0.26.2"
tokio = { version = "1.37.0", default-features = false, features = [
    "rt",
    "macros",
    "parking_lot",
] }
tokio-udev = "0.9.1"
