[package]
name = "power-cli"
version = "0.1.0"
edition = "2021"
authors = ["vlk"]

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.35.1", default-features = false, features = ["tokio-macros", "macros", "rt"] }
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
