[package]
name = "power-cli"
version = "0.1.0"
edition = "2021"
authors = ["vlk"]

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.30", default-features = false, features = ["async-await", "async-await-macro", "std"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.35.1", default-features = false, features = ["tokio-macros", "macros", "rt"] }
zbus = { version = "3.15.*", default-features = false, features = ["tokio"] }
