[package]
name = "psa-new"
authors = ["vlk"]
description = "A rewrite of my 'psa' program to show process information on Linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.7", default-features = false, features = [
    "std",
    "compile-time-rng",
] }
cached = "0.48.1"
derive_more = "0.99.17"
itertools = "0.12.1"
lazy_static = "1.4.0"
lscolors = "0.17.0"
nix = { version = "0.27.1", features = ["signal", "user", "term", "ioctl"] }
nu-ansi-term = "0.50.0"
procfs = { version = "0.16.0", default-features = false }
simple-eyre = "0.3.1"
strum = { version = "0.26.1", features = ["strum_macros", "derive", "phf"] }
strum_macros = "0.26.1"
thiserror = "1.0.56"
unicode-width = { version = "0.1.11", features = ["std"] }
