[package]
name = "psa-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
lscolors = "0.16.0"
nu-ansi-term = "0.49.0"
procfs = { version = "0.16.0", default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
static_init = "1.0.3"
users = { version = "0.11.0", default-features = false, features = ["cache"] }
