[package]
name = "psa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = [
    "std",
    "clock",
] }
lscolors = { version = "0.15.0", features = ["nu-ansi-term"] }
nix = { version = "0.27.1", features = ["process", "signal"] }
procfs = { version = "0.16.0", default-features = false }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
