[package]
name = "psa"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
ahash = { version = "0.8.11", features = ["no-rng", "std"], default-features = false }
lscolors = "0.17.0"
nix = { version = "0.28", features = ["process", "user", "signal"] }
nu-ansi-term = "0.50.0"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
procfs = { version = "0.16.0", default-features = false }
