[package]
name = "symlink_unfuckd"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
inotify = { version = "0.10.2", default-features = false, features = ["tokio", "stream"] }
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["rt", "io-std", "tokio-macros", "tracing", "signal", "parking_lot", "fs", "macros"], default-features = false }
tokio-stream = { version = "0.1.15", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["once_cell", "parking_lot", "std", "smallvec", "fmt"], default-features = false }
