[package]
name = "symlink_unfuckd"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
ahash = { version = "0.8.11", default-features = false, features = [
    "no-rng",
    "std",
] }
inotify = { version = "0.10.2", default-features = false }
once_cell = "1.19.0"
signal-hook = "0.3.17"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "once_cell",
    "parking_lot",
    "std",
    "smallvec",
    "fmt",
], default-features = false }
