[package]
name = "touchpad-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
eyre = "0.6.11"
futures = "0.3.29"
hyprland = "0.3.12"
log = "0.4.20"
tokio = { version = "1.35.0", features = ["tokio-macros", "mio"] }
tokio-udev = "0.9.1"
udev = "0.8.0"
