[package]
name = "vlkprompt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.6", default-features = false, features = ["compile-time-rng", "std"] }
git2 = { version = "0.18.1", default-features = false }
hostname = "0.3.1"
lazy_static = "1.4.0"
serde = "1.0.193"
serde-binary = "0.5.0"
