[package]
name = "waybar_supergfxd_dbus"
edition = "2021"
version = "0.1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
futures-lite = { version = "2.2.0", default-features = false, features = ["fastrand"] }
serde = { version = "1.0.197", default-features = false }
tokio = { version = "1.36.0", default-features = false, features = [
    "rt",
    "parking_lot",
    "io-std",
] }
zbus = { version = "4.1.2", default-features = false, features = ["tokio"] }
